// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders correctly when minimized 1`] = `
<LeftPanelLiveShareWarning
  isMinimized={true}
>
  <AccessibleButton
    className="mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__minimized"
    element="div"
    onClick={[Function]}
    role="button"
    tabIndex={0}
    title="You are sharing your live location"
  >
    <div
      className="mx_AccessibleButton mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__minimized"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="You are sharing your live location"
    >
      <div
        height={10}
      />
    </div>
  </AccessibleButton>
</LeftPanelLiveShareWarning>
`;

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders correctly when not minimized 1`] = `
<LeftPanelLiveShareWarning>
  <AccessibleButton
    className="mx_LeftPanelLiveShareWarning"
    element="div"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="mx_AccessibleButton mx_LeftPanelLiveShareWarning"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
    >
      You are sharing your live location
    </div>
  </AccessibleButton>
</LeftPanelLiveShareWarning>
`;

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders location publish error 1`] = `
<LeftPanelLiveShareWarning>
  <AccessibleButton
    className="mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__error"
    element="div"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="mx_AccessibleButton mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__error"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
    >
      An error occurred whilst sharing your live location
    </div>
  </AccessibleButton>
</LeftPanelLiveShareWarning>
`;
